[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menus/ArcadeMode.gd" type="Script" id=2]
[ext_resource path="res://Fonts/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Misc/icon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Menus/MenuHeader.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/DarkPanel.tres" type="StyleBox" id=7]

[node name="Node2D" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1336.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="Button" parent="." index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -128.0
margin_right = 175.0
margin_bottom = -38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Go back to the Main Menu."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint", "Rect", "Theme" ]

[node name="LevelDetails" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 610.0
margin_top = 110.0
margin_right = 1250.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
_sections_unfolded = [ "Theme" ]

[node name="LevelName" type="Label" parent="LevelDetails" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 620.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Level 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ColorRect" type="ColorRect" parent="LevelDetails" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 395.0
margin_top = 60.0
margin_right = 625.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="LevelPic" type="TextureRect" parent="LevelDetails" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 405.0
margin_top = 70.0
margin_right = 615.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="PlayButton" type="Button" parent="LevelDetails" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 310.0
margin_right = 620.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="HighScoreButton" type="Button" parent="LevelDetails" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 310.0
margin_right = 240.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "High Scores"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="LevelDescription" type="Label" parent="LevelDetails" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 70.0
margin_right = 370.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Select a level, it'll sure be challenging!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LevelList" type="Panel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 110.0
margin_right = 390.0
margin_bottom = 585.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
_sections_unfolded = [ "Theme" ]

[node name="Levels" type="VBoxContainer" parent="LevelList" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 0
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="row" type="HBoxContainer" parent="LevelList/Levels" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 280.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Level1" type="Button" parent="LevelList/Levels/row" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 130.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "1"
flat = false
align = 1

[node name="Level2" type="Button" parent="LevelList/Levels/row" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "2"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="row2" type="HBoxContainer" parent="LevelList/Levels" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 280.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Level3" type="Button" parent="LevelList/Levels/row2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 130.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "3"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Level4" type="Button" parent="LevelList/Levels/row2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "4"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="row3" type="HBoxContainer" parent="LevelList/Levels" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 280.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Level5" type="Button" parent="LevelList/Levels/row3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 130.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "5"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Level6" type="Button" parent="LevelList/Levels/row3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "6"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="row4" type="HBoxContainer" parent="LevelList/Levels" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 360.0
margin_right = 280.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Level7" type="Button" parent="LevelList/Levels/row4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 130.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "7"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Level8" type="Button" parent="LevelList/Levels/row4" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "8"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Header" parent="." index="3" instance=ExtResource( 6 )]

text = "Arcade Mode"

[node name="LevelLoadWarning" type="PopupPanel" parent="." index="4"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -154.0
margin_right = 260.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 7 )
popup_exclusive = false
_sections_unfolded = [ "Popup", "Theme", "custom_styles" ]

[node name="Title" type="Label" parent="LevelLoadWarning" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 16.0
margin_right = 502.0
margin_bottom = 236.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Arcade Mode is for players who have either completed the Story Mode or are confident in their abilities. Are you sure?"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelLoadWarning" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 236.0
margin_right = 512.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="YesButton" type="Button" parent="LevelLoadWarning/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 240.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="NoButton" type="Button" parent="LevelLoadWarning/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_right = 500.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="HighScore" type="Panel" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 610.0
margin_top = 110.0
margin_right = 1250.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Theme" ]

[node name="Title" type="Label" parent="HighScore" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "High Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Level" type="Label" parent="HighScore" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 170.0
margin_right = 305.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Level 0:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Time" type="Label" parent="HighScore" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 305.0
margin_top = 170.0
margin_right = 595.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "0 sec"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HighScoreBack" type="Button" parent="HighScore" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 350.0
margin_right = 475.0
margin_bottom = 435.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="LevelDetails/PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="LevelDetails/HighScoreButton" to="." method="_on_HighScoreButton_pressed"]

[connection signal="pressed" from="LevelList/Levels/row/Level1" to="." method="level_pressed" binds= [ 1, "Bombs, bombs, and bombs. Oh my!" ]]

[connection signal="pressed" from="LevelList/Levels/row/Level2" to="." method="level_pressed" binds= [ 2, "One block gaps aren't really that hard to get through... right?" ]]

[connection signal="pressed" from="LevelList/Levels/row2/Level3" to="." method="level_pressed" binds= [ 3, "Patterns, figures, oh my!" ]]

[connection signal="pressed" from="LevelList/Levels/row2/Level4" to="." method="level_pressed" binds= [ 4, "Multiple paths, one seemly better than the other..." ]]

[connection signal="pressed" from="LevelList/Levels/row3/Level5" to="." method="level_pressed" binds= [ 5, "Better go quick, or the black holes'll get you!" ]]

[connection signal="pressed" from="LevelLoadWarning/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]

[connection signal="pressed" from="LevelLoadWarning/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]

[connection signal="pressed" from="HighScore/HighScoreBack" to="." method="_on_HighScoreBack_pressed"]


